made an initial release